--- a/buckle.less
+++ b/buckle.less
@@ -31,3 +31,6 @@
 @import "sidebars.less";
 @import "footer.less";
 
+//	Use the basic forms.less if you are generating your own form HTML.
+@import "gravity-forms.less"
+// @import "basic-forms.less"
