Added .cover class

--- a/utilities.less
+++ b/utilities.less
@@ -54,6 +54,14 @@
 		z-index: 1;
 	}
 
+	.cover {
+		position: absolute;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		left: 0;
+	}
+
 	.hide-overflow { overflow: hidden; }
 
 	.menu {
