Added override to  pagination link hover state

--- a/buckle.less
+++ b/buckle.less
@@ -28,6 +28,7 @@
 @import "header.less";
 @import "homepage.less";
 @import "content.less";
+@import "post-lists.less";
 @import "sidebars.less";
 @import "footer.less";
 
