Fix IE8 Compatibility with sticky-footer-container mixin

--- a/mixins.less
+++ b/mixins.less
@@ -142,7 +142,7 @@
 		min-height: 100%;
 		position: relative;
 
-		&::after {
+		&:after {
 			content: "";
 			height: @height;
 			display: block;
