Provided default value for navbar height to fix NaN errors

--- a/variables.less
+++ b/variables.less
@@ -90,7 +90,7 @@
 	Navbar
 	========================================================================= */
 
-	@navbarHeight:                    auto;
+	@navbarHeight:                    40px;
 	@navbarBackgroundHighlight:       #ffffff;
 	@navbarBackground:                darken(@navbarBackgroundHighlight, 5%);
 	@navbarBorder:                    darken(@navbarBackground, 12%);
