Added semicolons to form file imports so they'd stop breaking everything

--- a/buckle.less
+++ b/buckle.less
@@ -33,5 +33,5 @@
 @import "footer.less";
 
 //	Use the basic forms.less if you are generating your own form HTML.
-@import "gravity-forms.less"
-// @import "basic-forms.less"
+@import "gravity-forms.less";
+// @import "basic-forms.less";
