--- a/mixins.less
+++ b/mixins.less
@@ -107,12 +107,23 @@
 	Site Structure Mixins
 	========================================================================= */
 
-	.centered-carousel( @imgWidth ) {
-		@media all and ( max-width: @imgWidth ) {
-			width: @imgWidth;
-			margin-left: 50%;
-			left: -@imgWidth/2;
-		}
+	.centered-carousel( @img-width, @item-width ) {
+		@margin: (-(@img-width - @item-width)/2);
+		.item {
+			overflow: hidden;
+			
+			.container {
+				width: @item-width;
+				margin-left: auto;
+				margin-right: auto;
+
+				img {
+					min-width: @img-width;
+					max-width: none;
+					margin-left: @margin;
+				}
+			}
+		} 
 	}
 
 
