Reorganized some mixins so they match the order of the wiki

--- a/mixins.less
+++ b/mixins.less
@@ -31,6 +31,17 @@
 		.box-shadow( 0 0 @size @color );
 	}
 
+	.overflow-wrap( @width: @gridRowWidth ) {
+		width: 100%;
+		min-height: 100%;
+		overflow: hidden;
+
+		@media all and ( max-width: @width ) {
+			width: @width;
+		}
+	}
+
+
 /* ==========================================================================
 	Nav Mixins
 	========================================================================= */
@@ -54,8 +65,12 @@
 	}
 
 /* ==========================================================================
-	Grid List Mixin
+	Layout Mixins
 	========================================================================= */
+
+/* --------------------------------------------------------------------------
+	Grid List Mixin
+	------------------------------------------------------------------------- */
 
 	.grid-list( @itemWidth, @itemCount, @totalWidth: @gridRowWidth, @clearing: true ) when not ( @clearing ) {
 		
@@ -103,10 +118,6 @@
 	}
 
 
-/* ==========================================================================
-	Site Structure Mixins
-	========================================================================= */
-
 	.centered-carousel( @img-width, @item-width ) {
 		@margin: (-(@img-width - @item-width)/2);
 		.item {
@@ -124,21 +135,6 @@
 				}
 			}
 		} 
-	}
-
-
-	/* --------------------------------------------------------------------------
-		Overflow Wrap Requirements:;
-		------------------------------------------------------------------------- */
-	
-	.overflow-wrap( @width: @gridRowWidth ) {
-		width: 100%;
-		min-height: 100%;
-		overflow: hidden;
-
-		@media all and ( max-width: @width ) {
-			width: @width;
-		}
 	}
 
 	/* --------------------------------------------------------------------------
