Removed MinCarouselWidth variable

--- a/homepage.less
+++ b/homepage.less
@@ -9,16 +9,14 @@
 	z-index: 2;
 
 	.carousel-inner {
-		// .centered-carousel( @minCarouselWidth );
+		.centered-carousel( @gridRowWidth );
 	}
 
 	.item {
-		min-width: @minCarouselWidth;
 		
 		img {
 			margin: 0 auto;
 			min-height: @carouselHeight;
-			min-width: @minCarouselWidth;
 		}		
 	}
 
