Added justifed nav, and created separate nav file

--- a/buckle.less
+++ b/buckle.less
@@ -22,6 +22,7 @@
 //	Base styles for site structure and text.
 @import "base.less";
 @import "text.less";
+@import "nav.less";
 
 //	Bare bones files that contain some mostly empty
 //	CSS selectors to get you started.
