Updated bootstrap color names

--- a/gravity-forms.less
+++ b/gravity-forms.less
@@ -6,7 +6,7 @@
 		// Easy way to get the hover/active states set.
 		.btn;
 		// Keep this up top, so you can override it's settings
-		.buttonBackground( @brandColor, lighten(@brandColor, 2%) );	
+		.buttonBackground( @brand-primary, lighten(@brand-primary, 2%) );	
 		padding: 5px 10px;
 
 		.border-radius( 0 );
@@ -21,7 +21,7 @@
 	========================================================================= */
 
 	.gform_wrapper span.gfield_required {
-		color: @brandColor;
+		color: @brand-primary;
 	}
 
 	.gform_wrapper .ginput_complex label, 
@@ -113,7 +113,7 @@
 		left: 100%;
 		
 		font-size: 12px;
-		background: @brandColor;
+		background: @brand-primary;
 		color: @white;
 		border: 0;
 		// Has to be a box-shadow to overcome border-boxing.
