--- a/variables.less
+++ b/variables.less
@@ -32,7 +32,7 @@
 	// Colors
 	// -------------------------
 
-	@brandColor: @blue;
+	@brand-primary: #6495ed;
 
 
 /* ==========================================================================
@@ -45,8 +45,8 @@
 
 	// Links
 	// -------------------------
-	@linkColor:             @brandColor;
-	@linkColorHover:        darken(@brandColor, 15%);
+	@linkColor:             @brand-primary;
+	@linkColorHover:        darken(@brand-primary, 15%);
 
 
 	// Fonts
