--- a/basic-forms.less
+++ b/basic-forms.less
@@ -6,7 +6,7 @@
 		// Easy way to get the hover/active states set.
 		.btn;
 		// Keep this up top, so you can override it's settings
-		.buttonBackground( @brandColor, lighten(@brandColor, 2%) );	
+		.buttonBackground( @brand-primary, lighten(@brand-primary, 2%) );	
 		padding: 5px 10px;
 
 		.border-radius( 0 );
