--- a/nav.less
+++ b/nav.less
@@ -8,7 +8,7 @@
 			&.active {
 				a {
 					.box-shadow( none );
-					color: @brandColor;
+					color: @brand-primary;
 				}
 			}
 
@@ -32,7 +32,7 @@
 	.primary-navbar .nav > .active > a:hover 
 	{
 		.box-shadow( none );
-		color: @brandColor;
+		color: @brand-primary;
 	}
 
 /* ==========================================================================
