Removed deprecated @white var

--- a/variables.less
+++ b/variables.less
@@ -39,7 +39,7 @@
 	Text
 	========================================================================= */
 
-	@bodyBackground:        @white;
+	@bodyBackground:        #fff;
 	@textColor:             @grayDarker;
 
 
@@ -106,8 +106,8 @@
 	Button Colors
 	========================================================================= */
 
-	@btnBackground:                     @white;
-	@btnBackgroundHighlight:            darken(@white, 10%);
+	@btnBackground:                     #fff;
+	@btnBackgroundHighlight:            darken(#fff, 10%);
 	@btnBorder:                         #bbb;
 
 	@btnPrimaryBackground:              @linkColor;
