Remove more deprecated mixins

--- a/basic-forms.less
+++ b/basic-forms.less
@@ -6,10 +6,10 @@
 		// Easy way to get the hover/active states set.
 		.btn;
 		// Keep this up top, so you can override it's settings
-		.buttonBackground( @brand-primary, lighten(@brand-primary, 2%) );	
+		.button-variant( @brand-primary, lighten(@brand-primary, 2%), @brand-primary );	
 		padding: 5px 10px;
 
-		.border-radius( 0 );
+		border-radius: 0;;
 	}
 
 	input, select {
