--- a/gravity-forms.less
+++ b/gravity-forms.less
@@ -6,10 +6,10 @@
 		// Easy way to get the hover/active states set.
 		.btn;
 		// Keep this up top, so you can override it's settings
-		.buttonBackground( @brand-primary, lighten(@brand-primary, 2%) );	
+		.button-variant( @brand-primary, lighten(@brand-primary, 2%), @brand-primary );	
 		padding: 5px 10px;
 
-		.border-radius( 0 );
+		border-radius: 0;;
 	}
 
 	input, select {
@@ -45,7 +45,7 @@
 	.gform_wrapper textarea,
 	.gform_wrapper input[type="file"],
 	.gform_wrapper input[type="password"] {
-		.border-radius( 0 );
+		border-radius: 0;;
 		padding: 5px !important;  // Dirty and disgusting, I know.  But necessary to override GF's CSS
 		font-size: 14px;
 		line-height: 1.6em;
