--- a/gravity-forms.less
+++ b/gravity-forms.less
@@ -117,7 +117,7 @@
 		color: @white;
 		border: 0;
 		// Has to be a box-shadow to overcome border-boxing.
-		.box-shadow( ~"0 -1px 0  @{green}, 0 1px 0 @{green}" );
+		.box-shadow( ~"0 -1px 0  @brand-primary, 0 1px 0 @brand-primary" );
 	}
 
 /* ==========================================================================
