Removed @white deprecated var

--- a/gravity-forms.less
+++ b/gravity-forms.less
@@ -114,7 +114,7 @@
 		
 		font-size: 12px;
 		background: @brand-primary;
-		color: @white;
+		color: #fff;
 		border: 0;
 		// Has to be a box-shadow to overcome border-boxing.
 		.box-shadow( ~"0 -1px 0  @brand-primary, 0 1px 0 @brand-primary" );
