--- a/utilities.less
+++ b/utilities.less
@@ -4,10 +4,10 @@
 
 	body {
 		width: 100%;
-		.sans-font();
+		.web-font();
 
 		strong {
-			.sans-font( @bold );
+			.web-font( @bold-font );
 		}
 	}
 
