VArs updated to comply with Bootstrap 3

--- a/gravity-forms.less
+++ b/gravity-forms.less
@@ -13,7 +13,7 @@
 	}
 
 	input, select {
-		color: @textColor;
+		color: @text-color;
 	}
 
 /* ==========================================================================
