--- a/variables.less
+++ b/variables.less
@@ -22,11 +22,11 @@
 	// Grays
 	// -------------------------
 
-	@grayDarker:            #423d3e;
-	@grayDark:              #615b5c;
-	@gray:                  #c0bebe;
-	@grayLight:             #e2e2e2;
-	@grayLighter:           #cfcece;
+	@gray-darker:            lighten(#000, 13.5%); // #222
+	@gray-dark:              lighten(#000, 20%);   // #333
+	@gray:                   lighten(#000, 33.5%); // #555
+	@gray-light:             lighten(#000, 60%);   // #999
+	@gray-lighter:           lighten(#000, 93.5%); // #eee
 
 
 	// Colors
@@ -39,14 +39,14 @@
 	Text
 	========================================================================= */
 
-	@bodyBackground:        #fff;
-	@textColor:             @grayDarker;
+	@body-bg:        #fff;
+	@text-color:             @gray-darker;
 
 
 	// Links
 	// -------------------------
-	@linkColor:             @brand-primary;
-	@linkColorHover:        darken(@brand-primary, 15%);
+	@link-color:             @brand-primary;
+	@link-hover-color:       darken(@brand-primary, 15%);
 
 
 	// Fonts
@@ -56,7 +56,7 @@
 
 	@headingsFontFamily:    inherit; // empty to use BS default, @baseFontFamily
 	@headingsFontWeight:    bold;    // instead of browser default, bold
-	@headingsColor:         inherit; // empty to use BS default, @textColor
+	@headingsColor:         inherit; // empty to use BS default, @text-color
 
 
 
@@ -73,39 +73,66 @@
 
 	// Sizes
 	// -------------------------
-	@baseFontSize:          16px;
-	@baseFontFamily:        @sans-font-stack;
-	@baseLineHeight:        1.6;
-	@altFontFamily:         @serif-font-stack;	
+	@font-size-base:          16px;
+	@font-size-large:         ceil(@font-size-base * 1.25); // 20
+	@font-size-small:         ceil(@font-size-base * 0.85); // 14
+	
+	@font-family-base:        @font-family-sans-serif;
+	
+	@line-height-base:        1.6;
+	@line-height-computed:    floor(@font-size-base * @line-height-base); // ~20px
+
+	@headings-line-height:    1.1;
+	@headings-font-weight:    normal;
+	@headings-font-family:    @font-family-base;	
 
 
 /* ==========================================================================
 	Navbar
 	========================================================================= */
 
-	@navbarHeight:                    40px;
-	@navbarBackgroundHighlight:       #ffffff;
-	@navbarBackground:                darken(@navbarBackgroundHighlight, 5%);
-	@navbarBorder:                    darken(@navbarBackground, 12%);
-
-	@navbarText:                      #777;
-	@navbarLinkColor:                 #777;
-	@navbarLinkColorHover:            @grayDark;
-	@navbarLinkColorActive:           @gray;
-	@navbarLinkBackgroundHover:       transparent;
-	@navbarLinkBackgroundActive:      transparent;
+	@navbar-height:                    50px;
+	@navbar-margin-bottom:             @line-height-computed;
+	@navbar-color:                     #777;
+	@navbar-bg:                        #f8f8f8;
+	@navbar-border:                    darken(@navbar-bg, 6.5%);
+	@navbar-border-radius:             @border-radius-base;
+	@navbar-padding-horizontal:        floor(@grid-gutter-width / 2);
+	@navbar-padding-vertical:          ((@navbar-height - @line-height-computed) / 2);
 
 
 /* ==========================================================================
 	Button Colors
 	========================================================================= */
 
-	@btnBackground:                     #fff;
-	@btnBackgroundHighlight:            darken(#fff, 10%);
-	@btnBorder:                         #bbb;
+	@btn-font-weight:                bold;
 
-	@btnPrimaryBackground:              @linkColor;
-	@btnPrimaryBackgroundHighlight:     spin(@btnPrimaryBackground, 20%);
+	@btn-default-color:              #333;
+	@btn-default-bg:                 #fff;
+	@btn-default-border:             #ccc;
+
+	@btn-primary-color:              #fff;
+	@btn-primary-bg:                 @brand-primary;
+	@btn-primary-border:             darken(@btn-primary-bg, 5%);
+
+	@btn-success-color:              #fff;
+	@btn-success-bg:                 @brand-success;
+	@btn-success-border:             darken(@btn-success-bg, 5%);
+
+	@btn-warning-color:              #fff;
+	@btn-warning-bg:                 @brand-warning;
+	@btn-warning-border:             darken(@btn-warning-bg, 5%);
+
+	@btn-danger-color:               #fff;
+	@btn-danger-bg:                  @brand-danger;
+	@btn-danger-border:              darken(@btn-danger-bg, 5%);
+
+	@btn-info-color:                 #fff;
+	@btn-info-bg:                    @brand-info;
+	@btn-info-border:                darken(@btn-info-bg, 5%);
+
+	@btn-link-disabled-color:        @gray-light;
+
 
 
 /* ==========================================================================
@@ -115,6 +142,5 @@
 	// 1020px default, no gutters.
 	// -------------------------
 	
-	@gridColumns:             12;
-	@gridColumnWidth:         85px;
-	@gridGutterWidth:         0px;
+	@grid-columns:             12;
+	@grid-gutter-width:         0px;
