Fixed nav overrides, moved header nav code back to header.less

--- a/header.less
+++ b/header.less
@@ -10,3 +10,26 @@
 	// .logo( 100px, 100px );
 	margin: 0;
 }
+
+/* ==========================================================================
+	Primary Nav
+	========================================================================= */
+
+	.primary-nav {
+
+		.nav {
+
+			li {
+				margin: 0 10px 0;
+
+				a {
+					display: block;
+				}
+				
+				&.active {
+
+				}
+			}
+		
+		}
+	}
