Removed text shadow from carosuel captions

--- a/homepage.less
+++ b/homepage.less
@@ -20,6 +20,10 @@
 		}		
 	}
 
+	.carousel-caption {
+		text-shadow: none;
+	}
+
 	.fading-item {
 		.transition( .7s ease-in-out opacity );
 		left: 0 !important;
