Properly added column width variables

--- a/content.less
+++ b/content.less
@@ -3,14 +3,19 @@
 	========================================================================= */
 
 	.primary-column {
-		width: 80%;
+		width: @primary-column-width;
 		float: left
 	}
 
 	.secondary-column {
-		width: 20%;
+		width: @secondary-column-width;
 		float: left;
 	}
+
+	.full-column {
+		width: @full-column-width;
+	}
+
 
 /* ==========================================================================
 	General
