--- a/variables.less
+++ b/variables.less
@@ -9,6 +9,10 @@
 	Layout
 	========================================================================= */
 
+	@primary-column-width:    800px;
+	@secondary-column-width:  200px;
+	@full-column-width:       (@primary-column-width + @secondary-column-width);
+
 	@footerHeight:       200px;
 
 	@carouselHeight:     500px;
