--- a/homepage.less
+++ b/homepage.less
@@ -3,7 +3,7 @@
 	========================================================================= */
 
 .carousel {
-	height: @carouselHeight;
+	height: @carousel-height;
 	width: 100%;
 	margin: 0;
 	z-index: 2;
@@ -16,7 +16,7 @@
 		
 		img {
 			margin: 0 auto;
-			min-height: @carouselHeight;
+			min-height: @carousel-height;
 		}		
 	}
 
