--- a/variables.less
+++ b/variables.less
@@ -13,9 +13,9 @@
 	@secondary-column-width:  200px;
 	@full-column-width:       (@primary-column-width + @secondary-column-width);
 
-	@footerHeight:       200px;
+	@footer-height:       200px;
 
-	@carouselHeight:     500px;
+	@carousel-height:     500px;
 
 
 /* ==========================================================================
