--- a/buckle.less
+++ b/buckle.less
@@ -1,21 +1,15 @@
 /*!
- * Buckle v1.0
- *
- * Copyright 2013 The Jake Group, LLC
- * Licensed under the Apache License v2.0
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * We can have cool license things too.
+ * Buckle v1.1
  */
 
-//	Variables, Mixins, and Reusable styles.
-//	Try not to edit these.
+@import "../bootstrap/bootstrap.less";
+
+// Variables, Mixins, and Reusable styles.
 @import "variables.less";
 @import "mixins.less";
 @import "utilities.less";
 
 //	Inidividual, reusable site components.
-//	Comment out unused items to save on file size.	
 @import "searchbar.less";
 
 
@@ -24,8 +18,7 @@
 @import "text.less";
 @import "nav.less";
 
-//	Bare bones files that contain some mostly empty
-//	CSS selectors to get you started.
+//	Bare bones files to get you started
 @import "header.less";
 @import "homepage.less";
 @import "content.less";
